--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ roomVersion = "2.7.1"
 securityCrypto = "1.1.0-alpha07"
 streamWebrtcAndroid = "1.3.8"
 material3Android = "1.3.2"
+firebaseBom = "33.14.0"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
@@ -71,6 +72,8 @@ protobuf-kotlin-lite = {module = "com.google.protobuf:protobuf-kotlin-lite", ver
 timber = {module = "com.jakewharton.timber:timber", version = "5.0.1"}
 stream-webrtc-android = { module = "io.getstream:stream-webrtc-android", version.ref = "streamWebrtcAndroid" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging" }
 
 [plugins]
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -80,3 +83,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 protobuf = { id = "com.google.protobuf", version = "0.9.4" }
 google-devtools-ksp = {id = 'com.google.devtools.ksp', version = '2.1.20-1.0.32'}
 google-dagger-hilt = {id = "com.google.dagger.hilt.android", version = "2.56.1"}
+google-gms-services = {id = "com.google.gms.google-services", version = "4.4.2"}
